replaced $lang_displayreport_php['invalid_data'] with $lang_report_php['invalid_data'] in displayreport.php
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3011 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -25,7 +25,7 @@ Changelog
 [O] = Optimization of code
 [S] = Security fix (issues that are related to security)
 *********************************************
-
+2006-05-08 [B] Replaced $lang_displayreport_php['invalid_data'] with $lang_report_php['invalid_data'] in displayreport.php {TranzNDance}
 2006-05-08 [B] Fixed bug where input field was saved for sender's name in report_file.php {TranzNDance}
 2006-05-08 [B] Fixed JavaScript error messages for crop and rotate {GauGau}
 2006-05-08 [A] Added better album dropdown to upload screen {GauGau}
