Fixed visibility issue for clickable options (thread id 30704)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3020 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-05-13 [C] Fixed visibility issue for clickable options in fruity theme {GauGau}
 2006-05-13 [B] Fixed missing translation in batch-add {GauGau}
 2006-05-13 [A] Added pseudo-class definitions (hover and visited) for thumbnails in all themes {GauGau}
 2006-05-10 [B] Fixed admin recognition issue in IPB bridge {Nibbler}
