Fixed visibility issue for clickable options (thread id 30704)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3021 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -359,3 +359,4 @@ Updated screenshots in docs - 09th May 2006, GauGau
 Changed coppermine version from cpg1.4.5 to cpg1.4.6 - 09th May 2006, GauGau
 Fixed admin recognition issue in IPB bridge - 10th May 2006, Nibbler
 Fixed missing translation in batch-add - 13th May 2006, GauGau
+Fixed visibility issue for clickable options in fruity theme - 13th May 2006, GauGau
