Added mySQL issues to FAQ
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3023 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-05-15 [D] Added mySQL issues to FAQ {GauGau}
 2006-05-13 [O] Removed check for install.lock in favor of config.inc.php {GauGau}
 2006-05-13 [C] Fixed visibility issue for clickable options in fruity theme {GauGau}
 2006-05-13 [B] Fixed missing translation in batch-add {GauGau}
