--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -361,3 +361,4 @@ Fixed admin recognition issue in IPB bridge - 10th May 2006, Nibbler
 Fixed missing translation in batch-add - 13th May 2006, GauGau
 Fixed visibility issue for clickable options in fruity theme - 13th May 2006, GauGau
 Fix the obscure, misdocumented "feature" in Apache that causes the server to process the last "valid" extension in the filename (rar exploit): replace all dots in the filename except the last one with an underscore - 17th May 2006, GauGau
+Converted english_gb.php from partial translation that needed language fallback to full translation - 17th May 2006, GauGau
