Avoiding deleting group_name where possible
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3034 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-05-17 [C] Avoid deleting group_name unnecessarily {Nibbler}
 2006-05-17 [C] Avoiding php notice in profile.php {Nibbler}
 2006-05-17 [B] Fixing edit permissions bug {Nibbler}
 2006-05-17 [D] Changed layout of changelog (this file) {GauGau}
