--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-05-17 [C] Cleaning notices caused by bridging system {Nibbler}
 2006-05-17 [B] Fixing nuke check 'continue anyway' feature {Nibbler}
 2006-05-17 [B] Fixing search * wildcard {Nibbler}
 2006-05-17 [C] Avoid deleting group_name unnecessarily {Nibbler}
