--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-05-17 [B] Fixed upload approval to personal galleries when public upload approval is turned off {GauGau}
 2006-05-17 [B] Preventing whitespace in include/config.inc.php breaking cookies {Nibbler}
 2006-05-17 [C] Cleaning notices caused by bridging system {Nibbler}
 2006-05-17 [B] Fixing nuke check 'continue anyway' feature {Nibbler}
