--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-05-17 [B] Fixed known issue from 1.4.x with "albums with same name" (topic:31146) {Paver}
 2006-05-17 [B] Fixed category statistics, making unapproved uploads not being taken into account {GauGau}
 2006-05-17 [B] Fixed upload approval to personal galleries when public upload approval is turned off {GauGau}
 2006-05-17 [B] Preventing whitespace in include/config.inc.php breaking cookies {Nibbler}
