--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-05-17 [B] Fixed hardcoding of 'iso-8859-1' in stat_details, keyword_select, xp_publish {Paver}
 2006-05-17 [B] Fixed errant "inactive_next_tab" notice & put in commented placeholder code {Paver}
 2006-05-17 [B] Fixed category statistics, making unapproved uploads not being taken into account {GauGau}
 2006-05-17 [B] Fixed upload approval to personal galleries when public upload approval is turned off {GauGau}
