--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-05-19 [O] Removed unneeded flush of outbut buffer in category manager {GauGau}
 2006-05-19 [C] Replaced "report to moderator" button in hardwired theme to match the overall look of the theme {GauGau}
 2006-05-19 [C] Replaced "report to moderator" button in eyeball theme to match the overall look of the theme {GauGau}
 2006-05-18 [B] Added imagejpeg workaround to address bug in PHP4.4.1 {GauGau}
