added code so that last selected album comes preselect during upload
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3092 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-06-02 [A] Added code so that during upload the last selected album comes preselect in album list {Abbas}
 2006-06-01 [A] Added Approve/Disapprove radio buttons in editpics.php as well as editOnePic.php {Aditya}
 2006-06-01 [A] Added config settable global password for registration feature {Abbas}
 2006-05-29 [A] Added comment approval option {GauGau} - work in progress (still open issues)
