--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-06-06 [S] Modified fix for usermgr security issue {Paver}
 2006-06-05 [S] Fixed the usermgr security issue {Abbas}
 2006-06-02 [M] Fixed discrepancies between themes.inc.php and sample theme {GauGau}
 2006-06-02 [A] Added code so that during upload the last selected album comes preselect in album list {Abbas}
