--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -29,6 +29,7 @@ Changelog
 2006-06-06 [S] Modified fix for usermgr security issue {Paver}
 2006-06-05 [B] Removed filmstrip function from classic theme {Nibbler}
 2006-06-05 [S] Fixed the usermgr security issue {Abbas}
+2006-06-04 [B] Fixed private images showing up in lastup & random {Paver}
 2006-05-23 [M] Increased version number in svn from 1.4.6 to 1.4.7 {GauGau}
 2006-05-23 [D] Added missing detail in database requirements section {GauGau}
 2006-05-19 [M] Release of cpg1.4.6 {GauGau}
