--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-06-06 [M] Release of cpg1.4.7 {GauGau}
+2006-06-06 [M] Updated version count in versioncheck.php {GauGau}
 2006-06-06 [B] Fixed 'lastalb' bug for MySQL 4.1+ (known issue for 3.23, 4.0) {Paver}
 2006-06-06 [S] Modified fix for usermgr security issue {Paver}
 2006-06-05 [B] Removed filmstrip function from classic theme {Nibbler}
