--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-06-15 [B] Fixed keyword "insert from list" not working in Firefox {Paver}
 2006-06-12 [B] Fixed loss of default value for user_password in update.sql {Nibbler}
 2006-06-12 [B] Added table type info for all tables {GauGau}
 2006-06-07 [D] Added section to docs about editing user profiles {GauGau}
