--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-07-13 [A] Added Brazilian-Portuguese language file (user contribution) {GauGau}
 2006-07-10 [D] Added documentation improvements {GauGau}
 2006-06-30 [B] Created a new snapshot of themes.inc.php for the sample theme.php {Paver}
 2006-06-25 [B] Removed admin from secondary group in usermgr.php - topic 32781 {Paver}
