Added Albanian language file (user contribution)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3170 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-07-17 [A] Added Albanian language file (user contribution) {GauGau}
 2006-07-13 [A] Added Brazilian-Portuguese language file (user contribution) {GauGau}
 2006-07-10 [D] Added documentation improvements {GauGau}
 2006-06-30 [B] Created a new snapshot of themes.inc.php for the sample theme.php {Paver}
