added the watermark feature (thread 29862)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3180 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-07-21 [A] Added the watermark feature {Abbas}
 2006-07-21 [O] Made silly_safe_mode a config option instead of a constant {GauGau}
 2006-07-13 [C] Fixed linked space char in comments {GauGau}
 2006-07-10 [D] Added documentation improvements {GauGau}
