--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-07-28 [D] Fixed anchor link in docs {GauGau}
 2006-07-22 [A] Added the undo watermark and autorefresh in admin tools {Abbas}
 2006-07-21 [A] Added the watermark feature {Abbas}
 2006-07-21 [O] Made silly_safe_mode a config option instead of a constant {GauGau}
