--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-08-01 [C] Fixed relative positioning glitch of navmenu in IE {GauGau}
 2006-07-28 [O] Updated hebrew language file (user contribution) {GauGau}
 2006-07-28 [D] Fixed anchor link in docs {GauGau}
 2006-07-17 [A] Added Albanian language file (user contribution) {GauGau}
