--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -27,6 +27,9 @@ Changelog
 *********************************************
 
 2006-08-07 [D] Added breadcrumb to config section of documentation {GauGau}
+2006-08-06 [B] Fixed distorted album thumbs when using cropping and thumb width != height {Stramm}
+2006-08-05 [A] Added movie download link to picinfo {Stramm}
+2006-08-05 [A] Added thumb cropping and sharpening {Stramm}
 2006-08-05 [B] Fixed the exif/iptc issues -  watermark related. {Abbas}
 2006-08-01 [C] Fixed relative positioning glitch of navmenu in IE {GauGau}
 2006-07-28 [D] Fixed anchor link in docs {GauGau}
