Replaced hard-coded strings in crop/rotate function with actual translation strings (thread ID 32555)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3216 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-08-09 [B] Replaced hard-coded strings in crop/rotate function with actual translation strings {GauGau}
 2006-08-08 [D] Resized some images in the docs for faster loading of the page {GauGau}
 2006-08-07 [D] Added breadcrumb to config section of documentation {GauGau}
 2006-08-06 [B] Fixed distorted album thumbs when using cropping and thumb width != height {Stramm}
