--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -25,7 +25,9 @@ Changelog
 [O] = Optimization of code
 [S] = Security fix (issues that are related to security)
 *********************************************
-
+2006-08-11 [D] Added $extra_info and $install_info implementations to the sample plugin {Donnoman}
+2006-08-11 [C] Changed pluginmgr.php to display $extra_info and $install_info clearly with its associated plugin {Donnoman}
+2006-08-11 [B] Fixed $extra_info and $install_info repeating for unrelated plugins {Donnoman}
 2006-08-10 [D] Changed minimum requirements section in docs from PHP4.1.0 to PHP4.2.0 {GauGau}
 2006-08-09 [B] Replaced hard-coded strings in crop/rotate function with actual translation strings {GauGau}
 2006-08-08 [D] Resized some images in the docs for faster loading of the page {GauGau}
