--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -25,7 +25,9 @@ Changelog
 [O] = Optimization of code
 [S] = Security fix (issues that are related to security)
 *********************************************
-
+2006-08-12 [D] Added $extra_info and $install_info implementations to the sample plugin {Donnoman}
+2006-08-12 [C] Changed pluginmgr.php to display $extra_info and $install_info clearly with its associated plugin {Donnoman}
+2006-08-12 [B] Fixed $extra_info and $install_info repeating for unrelated plugins {Donnoman}
 2006-08-11 [B] Fixed duplicate documentation_lnk per http://coppermine-gallery.net/forum/index.php?topic=33836.msg158112#msg158112 {Donnoman}
 2006-08-10 [B] Removed BOM (Byte Order Mark) from Hebrew, Polish and Slovenian {GauGau}
 2006-08-10 [D] Changed minimum requirements section in docs from PHP4.1.0 to PHP4.2.0 {GauGau}
