--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -25,6 +25,8 @@ Changelog
 [O] = Optimization of code
 [S] = Security fix (issues that are related to security)
 *********************************************
+
+2006-08-16 [B] Fixed SEF plugin issue with favpics meta album {Nibbler}
 2006-08-12 [D] Added $extra_info and $install_info implementations to the sample plugin {Donnoman}
 2006-08-12 [C] Changed pluginmgr.php to display $extra_info and $install_info clearly with its associated plugin {Donnoman}
 2006-08-12 [B] Fixed $extra_info and $install_info repeating for unrelated plugins {Donnoman}
