--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-08-16 [B] Fixed row striping when config entries are hidden (ie. md5 passwords) {Nibbler}
+2006-08-16 [M] PHP6 compatibility fixes {Nibbler}
 2006-08-16 [B] Fixed SEF plugin issue with favpics meta album {Nibbler}
 2006-08-16 [A] Added row alternation for config, user manager, group manager, category manager, banning {GauGau}
 2006-08-15 [A] Added CSS class tableb_alternate to all themes, allowing alternating rows for lists of any kind {GauGau}
