Replaced common language vars with array equivalents
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3243 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-08-19 [O] Replaced common language vars with array equivalents {GauGau}
 2006-08-18 [A] Added disapproval/disapproval option of individual comments {GauGau}
 2006-08-18 [M] Updated file header info {GauGau}
 2006-08-18 [A] Added captcha for registration {GauGau}
