--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-08-20 [B] Fixed sql issue with missing/incorrect user galleries {Nibbler}
 2006-08-20 [A] Added title to slideshow {GauGau}
 2006-08-19 [O] Replaced common language vars with array equivalents {GauGau}
 2006-08-18 [A] Added disapproval/disapproval option of individual comments {GauGau}
