Added Flash support to ecard (work in progress)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3250 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-08-21 [A] Added Flash support to ecard {GauGau}
 2006-08-20 [B] Fixed sql issue with missing/incorrect user galleries {Nibbler}
 2006-08-20 [A] Added title to slideshow {GauGau}
 2006-08-19 [O] Replaced common language vars with array equivalents {GauGau}
