--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-08-24 [D] Added group membership section to docs {GauGau}
 2006-08-22 [C] Corrected spelling of 'determine' {Nibbler}
 2006-08-21 [A] Added Flash support to ecard {GauGau}
 2006-08-20 [B] Fixed sql issue with missing/incorrect user galleries {Nibbler}
