Improved language section of documentation
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3262 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-08-29 [D] Improved language section of documentation {GauGau}
 2006-08-26 [B] Fixed the file rename issue on editOnePic when watermarking is disabled {Abbas}
 2006-08-26 [A] Implemented the read exif info again checkbox on editOnePic {Abbas}
 2006-08-24 [D] Added group membership section to docs {GauGau}
