Reverted width="100%%" in themes.inc.php & sample theme - topic: 35701
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3270 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-09-01 [B] Reverted width="100%%" in themes.inc.php & sample theme - topic: 35701 {Paver}
 2006-08-26 [M] Release of cpg1.4.9 {GauGau}
 2006-08-24 [D] Added group membership section to docs {GauGau}
 2006-08-22 [C] Corrected spelling of 'determine' {Nibbler}
