--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-09-07 [A] Added slideshow view counter option {GauGau}
 2006-09-06 [A] Added "create personal album on registration" feature {GauGau}
 2006-09-06 [C] Minor fixes to sample plugin for illustration purposes {GauGau}
 2006-09-06 [C] Improved table layout on plugin manager page, added help icons and missing translation {GauGau}
