Added proper attribute to radio buttons for comment approval when editing files (standards compliance)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3284 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-09-08 [O] Added proper attribute to radio buttons for comment approval when editing files (standards compliance) {GauGau}
 2006-09-07 [A] Added slideshow view counter option {GauGau}
 2006-09-06 [A] Added "create personal album on registration" feature {GauGau}
 2006-09-06 [C] Minor fixes to sample plugin for illustration purposes {GauGau}
