--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-09-15 [C] Split user settings into registration and user settings {GauGau}
 2006-09-11 [A] Added the option to show random image from the album as album thumbnail {Abbas}
 2006-09-08 [D] Resized some screenshots, added content to "getting started" section {GauGau}
 2006-09-08 [O] Added proper attribute to radio buttons for comment approval when editing files (standards compliance) {GauGau}
