Updated credits section of documentation
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3292 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-09-17 [M] Updated credits section of documentation {GauGau}
 2006-09-04 [A] Added Indonesian language file (user contribution) {GauGau}
 2006-09-03 [M] Updated version count from cpg1.4.9 to cpg1.4.10 in subversion repository as a preparation for a possible future release {GauGau}
 2006-09-02 [O] Updated brazilian language file (user contribution) {GauGau}
