--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-10-16 [O] Improved editpics screen {GauGau}
 2006-10-16 [A] Added "Moderator for album pictures" hack {GauGau}
 2006-10-16 [B] BLOB and TEXT columns cannot have DEFAULT values. {Nibbler}
 2006-10-16 [D] Updated minimum requirements information. {Nibbler}
