--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-10-27 [B] Converting htmlentities back to normal format for use in emails {Nibbler}
 2006-10-21 [B] An empty string is NOT an integer {Nibbler}
 2006-10-20 [O] Added sorting improvement to SEF_URLs plugin {GauGau}
 2006-10-16 [O] Improved editpics screen {GauGau}
