--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-10-27 [B] Adding missing checks for email address validity and duplicate email addresses to profile page. {Nibbler}
 2006-10-27 [B] Pictures awaiting approval are no longer found using the search feature. {Nibbler}
 2006-10-27 [B] Converting htmlentities back to normal format for use in emails {Nibbler}
 2006-10-21 [B] An empty string is NOT an integer {Nibbler}
