--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-11-07 [B] Disabled global registration password for bridged installs {GauGau}
 2006-11-02 [O] Turned the voting links to javascript based redirection to stop bots from rating {Abbas}
 2006-11-02 [B] Fixed the pic approval on editpics {Abbas}
 2006-10-28 [S] Removing SQL injection vulnerability {Nibbler}
